--- a/DropDown/Sources/Compoonents/DropDown/DropDownView.xib
+++ b/DropDown/Sources/Compoonents/DropDown/DropDownView.xib
@@ -14,7 +14,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" userLabel="Drop Down View" customClass="TesteView" customModule="DropDown" customModuleProvider="target">
+        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" userLabel="Drop Down View">
             <rect key="frame" x="0.0" y="0.0" width="379" height="48"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
